--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <div class="hero-overlay">
 
         <!-- LOGO -->
-        <img src="{{ url_for('static', filename='uploads/real_newlogo.png') }}"
+        <img src="{{ url_for('static', filename='uploads/real.png') }}"
              class="hero-logo"
              alt="Real Promotion Logo">
 
@@ -78,3 +78,4 @@
 </section>
 
 {% endblock %}
+
