--- a/templates/index.html
+++ b/templates/index.html
@@ -19,11 +19,10 @@
              class="hero-logo"
              alt="Real Promotion Logo">
 
-        <!-- Title -->
-        <h1 class="hero-title">REAL PROMOTION</h1>
+       
 
         <!-- Dashboard btn -->
-        <a href="/dashboard" class="hero-btn">Go to Dashboard</a>
+        <a href="/dashboard" class="hero-btn"> Dashboard</a>
 
     </div>
 
@@ -86,3 +85,4 @@
 </section>
 
 {% endblock %}
+
