--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -127,7 +127,7 @@
         <div class="card-footer-actions">
           <form action="{{ url_for('delete_product', id=product.id) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this product?')" class="d-inline">
             <button type="submit" class="btn btn-sm btn-outline-danger">
-              <i class="bi bi-trash"></i>
+              <i class="bi bi-trash"></i> Delete
             </button>
           </form>
           <a href="{{ url_for('edit_product', id=product.id) }}" class="btn btn-sm btn-primary">
@@ -150,6 +150,7 @@
 
 </div>
 {% endblock %}
+
 
 
 
