--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
        
 
         <!-- Dashboard btn -->
-       
+       <a href="/dashboard" class="hero-btn">Enter Dashboard</a>
 
     </div>
 
@@ -84,4 +84,5 @@
 {% endblock %}
 
 
+ 
 
