--- a/static/css/index.css
+++ b/static/css/index.css
@@ -49,8 +49,8 @@
 /* Dashboard Button */
 .hero-btn {
   display: inline-block;
-  margin-bottom: 80px;
-  padding: 15px 100px;
+  margin-top: 300px;
+  padding: 10px 50px;
   background: #153A6E;
   color: #fff;
   border-radius: 40px;
@@ -119,6 +119,7 @@
 .erp-cta a:hover {
   transform: translateY(-4px);
 }
+
 
 
 
