--- a/templates/admin_master.html
+++ b/templates/admin_master.html
@@ -155,6 +155,9 @@
             <!-- These links will now work correctly without causing errors -->
         <a href="{{ url_for('dash') }}"><i class="fa-solid fa-chart-pie"></i> <span class="link-text">Dashboard</span></a>
             <a href="inventory"><i class="fa-solid fa-box-open"></i> <span class="link-text">Inventory</span></a>
+             <a class="nav-link" href="{{ url_for('categories') }}">
+        <i class="bi bi-folder"></i> Product Categories
+    </a>
             <a href="employees"><i class="fa-solid fa-users"></i> <span class="link-text">Employees</span></a>
             
 
@@ -209,5 +212,6 @@
 {% block page_scripts %}{% endblock %}
 </body>
 </html>
+
 
 
